# paracelsus

./: .actrc  .env.example  .gitignore  .pre-commit-config.yaml  README.md  WORK_LOG.md  docker-compose.yml  main.py  pyproject.toml
.github/act/: .env  .env.example
.github/workflows/: elt-pipeline.yml
compose/: databases.yml  infrastructure.yml  meltano.yml  mock-services.yml
dbt/: .user.yml  dbt_project.yml  profiles.yml
dbt/macros/: hl7_timestamp.sql
dbt/models/: sources.yml
dbt/models/marts/: dim_patient.sql  dim_physician.sql  dim_provider.sql  dim_state.sql  fact_patient_encounters.sql  fact_patient_utilization.sql  fact_provider_case_load.sql  schema.yml
dbt/models/staging/: schema.yml  stg_emr__appointments.sql  stg_emr__encounters.sql  stg_emr__patients.sql  stg_hl7__admissions.sql  stg_hl7__discharges.sql  stg_hl7__lab_results.sql  stg_hubspot__contacts.sql  stg_oltp__case_reviews.sql  stg_oltp__cases.sql  stg_oltp__physicians.sql  stg_oltp__providers.sql  stg_oltp__states.sql  stg_s3__contacts.sql
meltano/: .dockerignore  Dockerfile  entrypoint.sh  meltano.yml
mock_emr/: Dockerfile  generate_fixtures.py  main.py
mock_hl7_engine/: Dockerfile  main.py
mock_hubspot/: Dockerfile  generate_fixtures.py  main.py
scripts/: init.sh  init_olap.sql  run-elt.sh  run_pipeline.sh
synthetic_data/: Dockerfile  generate.py  generate_hl7.py  init_oltp.sql  seed_all.py  seed_oltp.py  seed_s3.py
terraform/: eventbridge.tf  lambda.tf  main.tf  s3.tf
terraform/lambda/: trigger_meltano.py
